criação-do-projeto

--- a/paginas/pag3.html
+++ b/paginas/pag3.html
@@ -14,25 +14,41 @@
 
     <h2><code>&lt;header&gt;</code></h2>
     <p>
-        A tag <code>&lt;header&gt;</code> define um cabeçario, ele pode conter elementos de título, um logotipo, um formulário de pesquisa e outros elementos
+        A tag <code>&lt;header&gt;</code> define um cabeçario, ele pode conter elementos de título, um logotipo, um formulário de pesquisa e outros elementos.
     </p>
     <br>
-    
+    <p> Na imagem, a tag é utilizada para definir a logotipo do site.</p>
+    <img src="img/printheader.png" alt="headerpngexemplo">
 
     <h2><code>&lt;main&gt;</code></h2>
-    <p></p>
+    <p>A tag <code>&lt;main&gt;</code> define o principal conteúdo dentro da tag <code>&lt;body&gt;</code> em sua página. a tag deve ser unica na página e também não pode ser filho das tags <code>&lt;article&gt;</code>, <code>&lt;aside&gt;</code>, <code>&lt;footer&gt;</code>, <code>&lt;header&gt;</code> e <code>&lt;nav&gt;</code>.</p>
+    <br>
+    <p>Na página, a tag é usada no conteúdo principal.</p>
+    <img src="img/printmain.png" alt="">
 
     <h2><code>&lt;footer&gt;</code></h2>
-    <p></p>
+    <p>A tag <code>&lt;footer&gt;</code> é usada para para criar o rodapé da sua página. O rodapé normalmente contém informações do autor da seção de dados, direitos autorais ou links de documentos relacionados.</p>
+    <br>
+    <p>Pode ser encontrado no lado inferior de páginas.</p>
+    <img src="img/printfooter.png" alt="">
 
     <h2><code>&lt;section&gt;</code></h2>
-    <p></p>
+    <p>Com a tag <code>&lt;section&gt;</code> podemos separar o conteúdo em seções, separando informações em áreas diferentes. O principal objetivo é retirar essa responsabilidade das tags. <code>&lt;div&gt;</code>.</p>
+    <br>
+    <p>Na imagem abaixo a tag <code>&lt;section&gt;</code> é usada em varias partes do site para separar e organizar todo conteúdo da pagina.</p>
+    <img src="img/printsection.png" alt="">
 
     <h2><code>&lt;article&gt;</code></h2>
-    <p></p>
+    <p>A tag <code>&lt;article&gt;</code> do HTML é usada para indicar que um bloco de conteúdo em um documento HTML é uma seção independente e autônoma de informações.</p>
+    <br>
+    <p> Na página, a tag é usada em todo conteúdo relacionado na pesquisa.</p>
+    <img src="img/printarticle.png" alt="">
 
     <h2><code>&lt;aside&gt;</code></h2>
-    <p></p>
+    <p>A tag <code>&lt;aside&gt;</code> do HTML é usada para indicar um conteúdo que é secundário em relação ao conteúdo principal de uma página.</p>
+    <br>
+    <p>Na imagem abaixo a tag é usada para outro assunto relacionado a página, algo desconexo ao conteúdo original.</p>
+    <img src="img/printaside.png" alt="">
 
     <h2><code>&lt;nav&gt;</code></h2>
     <p>
